[package]
name = "one2html"
version = "1.1.1"
authors = ["Markus Siemens <markus@m-siemens.de>"]
edition = "2018"
description = "Convert Microsoft OneNote® notebooks to HTML"
license = "MIT"
repository = "https://github.com/msiemens/one2html"
keywords = ["onenote"]
categories = ["command-line-utilities", "encoding"]

[features]
default = ["backtrace"]

backtrace = ["onenote_parser/backtrace"]

[dependencies]
askama = "0.14"
color-eyre = "0.5"
console = "0.14.0"
happylog = { version = "0.2.0", features = ["structopt"] }
indicatif = "0.17.0"
itertools = "0.9.0"
log = "0.4.11"
mime_guess = "2.0.3"
once_cell = "1.4.1"
onenote_parser = { version = "0.3.0", default-features = false }
palette = "0.5.0"
percent-encoding = "2.1.0"
regex = "1"
sanitize-filename = "0.3.0"
structopt = "0.3"

[profile.dev.package.backtrace]
opt-level = 3
