[package]
name = "one2html"
version = "1.2.0"
authors = ["Markus Siemens <markus@m-siemens.de>"]
edition = "2024"
description = "Convert Microsoft OneNote® notebooks to HTML"
license = "MIT"
repository = "https://github.com/msiemens/one2html"
keywords = ["onenote"]
categories = ["command-line-utilities", "encoding"]

[features]
default = ["backtrace"]

backtrace = ["onenote_parser/backtrace"]

[dependencies]
askama = "0.15"
color-eyre = "0.6"
console = "0.16"
env_logger = "0.11"
indicatif = "0.18"
itertools = "0.14"
log = "0.4"
mime_guess = "2.0"
once_cell = "1.21"
onenote_parser = { version = "1.0", default-features = false }
palette = "0.7"
percent-encoding = "2.3"
regex = "1.12"
sanitize-filename = "0.6"
clap = { version = "4.5", features = ["derive"] }

[profile.dev.package.backtrace]
opt-level = 3
